--- a/taller-practico-javascript-videogames/index.html
+++ b/taller-practico-javascript-videogames/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=egde">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./styles.css">
     <title>Juego Online</title>
 </head>
@@ -30,9 +31,9 @@
             </div>
     
             <div class="messages">
-                <p>life</p>
-                <p>Time</p>
-                <p>Recdord</p>
+                <p>life :</p>
+                <p>Time :</p>
+                <p>Recdord :</p>
             </div>
         </div>
     </section>
