funciones agregadas de subir lvl y lvl perdido

--- a/taller-practico-javascript-videogames/index.html
+++ b/taller-practico-javascript-videogames/index.html
@@ -23,17 +23,17 @@
             <canvas id="game"></canvas>
     
             <div class="controls">
-                <button class="btn-control" id="up" onclick="mover('up')">
+                <button class="btn-control" id="up" onclick="moveUp('up')">
                     <span class="flecha">↑</span>
                 </button>
                 <div class="fila-media">
-                    <button class="btn-control" id="left" onclick="mover('left')">
+                    <button class="btn-control" id="left" onclick="moveLeft('left')">
                         <span class="flecha">←</span>
                     </button>
-                    <button class="btn-control" id="down" onclick="mover('down')">
+                    <button class="btn-control" id="down" onclick="moveDown('down')">
                         <span class="flecha">↓</span>
                     </button>
-                    <button class="btn-control" id="right" onclick="mover('right')">
+                    <button class="btn-control" id="right" onclick="moveRight('right')">
                         <span class="flecha">→</span>
                     </button>
                 </div>
