Agregando vidas del juego y reinicio del juego si pierdes las vidas

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </div>
     
             <div class="messages">
-                <p>life :</p>
-                <p>Time :</p>
-                <p>Recdord :</p>
+                <p>lives : <span id="lives"></span></p>
+                <p>Time : <span id="time"></span></p>
+                <p>Recdord : <span id="record"></span></p>
             </div>
         </div>
     </section>
@@ -51,6 +51,6 @@
     </section>
 
     <script src="./maps.js"></script>
-    <script src="./game.js"></script>
+    <script src="/game.js"></script>
 </body>
 </html>
