--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="messages">
                 <p>lives : <span id="lives"></span></p>
                 <p>Time : <span id="time"></span></p>
-                <p>Recdord : <span id="record"></span></p>
+                <p>Record : <span id="record"></span></p>
             </div>
         </div>
     </section>
