corrigiendo eror en Index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=egde">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>Juego Online</title>
 </head>
 <body>
@@ -50,7 +50,7 @@
 
     </section>
 
-    <script src="./maps.js"></script>
+    <script src="/maps.js"></script>
     <script src="/game.js"></script>
 </body>
 </html>
