corrigiendo rutas de scripts de / a ./

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
             <canvas id="game"></canvas>
     
             <div class="controls">
-                <button class="btn-control" id="up" onclick="moveUp('up')">
+                <button class="btn-control" id="up">
                     <span class="flecha">↑</span>
                 </button>
                 <div class="fila-media">
-                    <button class="btn-control" id="left" onclick="moveLeft('left')">
+                    <button class="btn-control" id="left">
                         <span class="flecha">←</span>
                     </button>
-                    <button class="btn-control" id="down" onclick="moveDown('down')">
+                    <button class="btn-control" id="down">
                         <span class="flecha">↓</span>
                     </button>
-                    <button class="btn-control" id="right" onclick="moveRight('right')">
+                    <button class="btn-control" id="right">
                         <span class="flecha">→</span>
                     </button>
                 </div>
@@ -50,7 +50,7 @@
 
     </section>
 
-    <script src="/maps.js"></script>
-    <script src="/game.js"></script>
+    <script src="./maps.js"></script>
+    <script src="./game.js"></script>
 </body>
 </html>
