--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Juego Online</title>
 </head>
 <body>
+
+    <section id="start-screen" class="overlay">
+        <div>
+            <h1 class="titulo-neon">READY TO <span class="flicker">START</span>?</h1>
+            <button id="btn-start" class="btn-control">INITIALIZATE</button>
+        </div>
+    </section>
+
     <section class="header">
         <div class="contenedor-titulo">
             <h1 class="titulo-neon">N<span class="flicker">EO</span>N <span class="flicker">LABY</span>RI<span class="flicker">NT</span>H</h1>
@@ -21,10 +29,10 @@
 
         <div class="messages">
                 <p>lives : <span id="lives"></span></p>
-                <div>
-                    <p>Time : <span id="time"></span></p>
-                    <p>Record : <span id="record"></span></p>
-                </div>
+                <p>Level: <span id="level"></span></p>
+                <p>Time : <span id="time"></span></p>
+                <p>Record : <span id="record"></span></p>
+                <button id="btn-mute" class="btn-control_mute">🔊</button>
         </div>
         
         <div class="game-container">
@@ -54,6 +62,7 @@
 
     </section>
 
+    <audio src="./Assets/backgroundSound.mp3" loop autoplay volume="0.2"></audio>
     <script src="./maps.js"></script>
     <script src="./game.js"></script>
 </body>
