--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=egde">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <title>Juego Online</title>
@@ -11,9 +11,9 @@
 <body>
 
     <section id="start-screen" class="overlay">
-        <div>
-            <h1 class="titulo-neon">READY TO <span class="flicker">START</span>?</h1>
-            <button id="btn-start" class="btn-control">INITIALIZATE</button>
+        <div class="titulo-principal">
+            <h1 class="titulo-neon">READY TO<span class="flicker">START</span>?</h1>
+            <button id="btn-start" class="btn-control">GO!</button>
         </div>
     </section>
 
