--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
             
         </div>
     </section>
+
+    <section id="gameOver-screen" class="overlay hidden">
+        <div class="container-gameOver">
+            <h1 class="titulo-neon">GAME<span class="flicker space">OVER</span></h1>
+            <p class="subtitulo" id="final-stats">LEVEl: 0 - TIME: 0s</p>
+            <button id="btn-retry" class="btn-control_end">RETRY SYSTEM</button>
+        </div>
+    </section>
     <section class="footer">
 
     </section>
